[package]

name = "roman"
version = "0.0.4"
authors = ["Yann Villessuzanne <yann@miomio.fr>"]
license = "Unlicense"

description = "Convert between integers and roman numerals"
repository = "https://github.com/linfir/roman"
homepage = "https://github.com/linfir/roman"
documentation = "http://miomio.fr/rust/roman"
readme = "README.md"
keywords = ["text"]
